--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital@1&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital@1&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
+* {
   box-sizing: border-box;
 }
-body{
-margin: 0;
-height: 100%;
+body {
+  margin: 0;
+  height: 100%;
 }
 header {
   display: flex;
   flex: 1 1 0%;
   justify-content: space-around;
   flex-flow: row wrap;
-  align-items: center;
+  align-items:center;
   /* background-color:#9fb445; */
-  background-color:#899a3b;
-
-
-
-
+  background-color: #899a3b;
 }
 /********** START OF NAV BAR STYLING ************/
 .first-section {
   display: flex;
   flex: 1 1 0%;
   justify-content: space-between;
- 
 }
 
 .links ul {
@@ -34,23 +30,26 @@ header {
   justify-items: flex-end;
   gap: 50px;
   margin-right: 250px;
-font-family: 'Quattrocento Sans', sans-serif;
-
+  padding-top: 20px;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 
-ul li a{
- text-decoration: none;
- color: #dcd6ac;
-
+ul li a {
+  text-decoration: none;
+  color: #dcd6ac;
+  font-size: 20px;
+  /* font-weight: bold; */
 }
 .first-section img {
   height: auto;
-  width: 100px;
+  width: 110px;
   margin-left: 100px;
   margin-bottom: 5px;
   margin-top: 5px;
+ 
 }
 /********** END OF NAV BAR STYLING ************/
+
 .container {
   display: flex;
   flex: 1 1 0%;
@@ -62,39 +61,35 @@ ul li a{
   width: 500px;
   height: auto;
   margin-left: 100px;
- color: #322e15;
- font-family: 'Fleur De Leah', cursive;
-font-size:22px;
+  color: #322e15;
+  font-family: "Fleur De Leah", cursive;
+  font-size: 22px;
 }
-.header-main-left p{
- color: #dcd6ac;
-font-size: 20px;
-font-family: 'Quattrocento Sans', sans-serif;
-
+.header-main-left p {
+  color: #dcd6ac;
+  font-size: 20px;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 
-.header-main-left button{
-  width:80px;
-  height: 25px;
-  border:transparent;
+.header-main-left button {
+  width: 130px;
+  height: 30px;
+  border: transparent;
   border-radius: 6px;
-  font-size: 13px;
+  font-size: 17px;
   font-weight: bold;
-  background-color:#322e15 ;
- color: #dcd6ac;
-font-family: 'Quattrocento Sans', sans-serif;
-
-
-
+  background-color: #322e15;
+  color: #dcd6ac;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 .container img {
   width: 400px;
   height: auto;
   margin-right: 200px;
   padding: 15px;
-  opacity:0.9;
-  border:transparent;
-  border-top-left-radius:60px ;
+  opacity: 0.9;
+  border: transparent;
+  border-top-left-radius: 60px;
   border-bottom-right-radius: 60px;
 }
 /********** END OF HEDER STYLING ************/
@@ -109,10 +104,21 @@ main {
   flex-flow: column wrap;
   justify-content: space-around;
   align-items: center;
-  margin: 60px;
+  /* margin: 60px; */
   /* padding:50px; */
-}
 
+    background-color: #e5e6af;
+    margin: 0;
+    height: 100%;
+    
+}
+main h2{
+  font-family: 'Aclonica', sans-serif;
+  /* color: #322e15; */
+  color: #899a3b;
+
+  
+}
 .main-part1-img {
   display: flex;
   justify-content: space-evenly;
@@ -120,35 +126,74 @@ main {
   width: 500px;
   gap: 30px;
   margin-top: 20px;
+ 
+}
+.main-part1-img img{
+  border:solid 5px ;
+  border-radius: 10px;
+  border-color: #899a3b;
+  /* border-color: #322e15; */
+  width: 100px;
+  height: 100px;
+
 }
 .main-part1-p {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 10px;
   width: 500px;
+  margin-bottom: 50px;
 }
+.main-part1-p p{
+  color: #322e15;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-weight: bold;
+  font-size: 17px;
+text-align: center;
 
-.main-part2{
-    align-items: center;
-    text-align: center;
-    width: auto;
-    height: 200px;
-    padding: 60px;
-   
 }
-.main-part3{
-    align-self: center;
-    text-align: center;
-    padding: 10px;
-    margin: 20px;
+.main-part2 {
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 200px;
+  padding: 60px;
+  /* background-color: #605e2e; */
+  /* background-color: #78763a; */
+  background-color: #7d7534;
+
+
 }
-.sign{
-    align-self: center;
-    justify-self: center;
+.main-part2 p{
+  font-family: "Quattrocento Sans", sans-serif;
+  color: #dcd6ac;
+  font-weight: bold;
+  font-size: 20px;
 }
-footer{
-    text-align: center;
-    height:70px;
-    
+.main-part2 .author-name{
+  align-self: flex-end;
+  padding-left: 700px;
+  padding-top: 30px;
+}
+.main-part3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-flow: column wrap;
+  /* align-self: center;
+  text-align: center; */
+  padding: 10px;
+  margin: 20px;
+}
+.main-part3 .sign {
+  /* align-self: center;
+  justify-self: center; */
+  align-self: flex-end;
+  padding-left: 700px;
+  padding-top: 30px;
+}
+footer {
+  text-align: center;
+  height: 70px;
 }
